src/App.css
.App {
  text-align: center;
}

.App header {
  background-color: #123b71;
  border-bottom: 8px solid #ffda85;
  color: #eee;
  padding: 80px 40px;
}

@media screen and (max-width: 450px) {
  .App header {
    padding: 80px 20px;
  }
}

.App header a {
  color: #ffda85;
  display: block;
  font-size: 12px;
  margin: 40px 0;
}

.App header h2 {
  font-size: 32px;
  margin: auto;
  max-width: 500px;
}

.App header label {
  display: block;
}

.App header .Input {
  background: #eee;
  border: 1px solid #eee;
  border-radius: 4px;
  display: inline-block;
  font-size: 28px;
  margin: 10px;
  padding: 10px;
  color: #333;
}

.App header .Input input {
  background: none;
  border: none;
  display: inline-block;
  font-size: 28px;
  height: 40px;
  margin: 0 4px;
  padding: 0;
  text-align: center;
  width: 80%;
}

.App header .Input input::-webkit-outer-spin-button,
.App header .Input input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.App footer {
  margin-bottom: 20px;
  width: 100%;
}

.App footer a {
  color: #7e7e7e;
  font-size: 12px;
}

.App footer.noContent {
  bottom: 20px;
  margin-bottom: 0;
  position: absolute;
}

